@@ -1,5 +1,6 @@
 Changes for 1.8.3rc4
 
+ - [ZBX-2846] fixed undefined variables in "History of actions" screen element (Aly)
  - [ZBX-2838] fixed icons in GUI (Aly)
  - [ZBX-2816] fixed corruption of actions and screens in the database when doing node conversion (asaveljevs)
  - [ZBX-2842] fixed messaging system in fullscreen mode (Aly)
